2006-07-24  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.7:
        * NEWS: Updated.
        * configure.ac: Update to new release version.  Removing
	  docs/sv/Makefile from files to create, since it seems
	  to have build problems.

2006-07-21  Ray Strode  <rstrode@redhat.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c: fix off by one
	  error in previous patch.

2006-07-18  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/greeter/greeter.c: This patch attempts
	  to fix the problem by turning on io channel's internal
	  buffering feature, searching for the start of the next
	  message in the read in bytes and seeking backward to the
	  byte before the start of the next message.   We then
	  process only one message and return, picking up the next
	  message next iteration of the main loop.  Patch provided
	  by Ray Strode <rstrode@redhat.com>.

2006-07-18  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlogin.c, gui/gdmsession.[ch], gui/greeter/greeter.c,
	  gui/greeter/greeter_session.[ch]: Fix for bug #341619.  Now
	  GDM does not save the Failsafe GNOME or Xterm session as the
	  user's default.  Cleaned up the code and moved duplicate
	  functions from gdmlogin/gdmgreeter code to gdmsession common
	  code.

2006-07-17  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmsetup.c:  Fix for bug causing gdmsetup to have
	  performance issues starting up.  Fixes bug #345118.
	  Patch by Ray Strode <rstrode@redhat.com>.

2006-07-17  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdmconfig.c: Fix for compiling with GCC 2.95.
	  Fix for bug #347625.  Patch by Jens Granseuer
	  <jensgr@gmx.net>.

2006-07-10  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.6:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-06-30  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmcommon.c: Fix timed login message so it works
	  when TimedLogin is set to use a piped script.  